# my_ros_class_code

./: README.md
lqc_robot_description/: CMakeLists.txt  README.md
lqc_robot_description/config/: lqc.rviz
lqc_robot_description/launch/: gazebo.launch
lqc_robot_description/urdf/: simple_robot.xacro
lqc_robot_description/xacro/: simple_robot.xacro  wheels.xacro
lqc_ros2_class_code/src/: README.md
lqc_ros2_class_code/src/my_class_pkg/: package.xml
lqc_ros2_class_code/src/my_class_pkg/action/: MyAction.action
lqc_ros2_class_code/src/my_class_pkg/launch/: bringup_topic.launch.py
lqc_ros2_class_code/src/my_class_pkg/src/: msg_publisher.cpp  msg_subscriber.cpp  ros_action_client.cpp  ros_publisher.cpp  ros_subscriber.cpp
lqc_ros2_class_code/src/my_class_pkg/srv/: MyServiceMsg.srv
lqc_ros2_class_code/src/my_param_pkg/: README.md
lqc_ros2_class_code/src/my_param_pkg/launch/: parameter.launch.py
lqc_ros2_class_code/src/my_param_pkg/scripts/: dynamic_param.py  turtle_dynamic_speed.py
lqc_ros2_class_code/src/my_param_pkg/src/: ros_param.cpp
lqc_ros2_class_code/src/my_tools_pkg/: README.md  package.xml
lqc_ros_class_code/src/: README.md
lqc_ros_class_code/src/lqc_robot_description/: README.md  package.xml
lqc_ros_class_code/src/lqc_robot_description/launch/: display.launch
lqc_ros_class_code/src/lqc_robot_description/urdf/: simple_robot.urdf
lqc_ros_class_code/src/lqc_robot_description/xacro/: chassis.xacro  main.xacro
lqc_ros_class_code/src/move_forward/: CMakeLists.txt  package.xml
lqc_ros_class_code/src/move_forward/src/: move_forward.cpp
lqc_ros_class_code/src/odom_forward/: CMakeLists.txt  package.xml
lqc_ros_class_code/src/odom_forward/src/: odom_forward.cpp
lqc_ros_class_code/src/sensor_pkg/: CMakeLists.txt  package.xml
lqc_ros_class_code/src/sensor_pkg/src/: ros_bump.cpp  ros_bump_avoid.cpp  ros_imu.cpp  ros_tof_avoid.cpp
lqc_ros_class_code/src/visual_indetity/: CMakeLists.txt  package.xml
lqc_ros_class_code/src/visual_indetity/scripts/: apriltag_follow.py  follow_line.py  gesture_movement.py  get_ros_image.py
lqc_ros_class_code/src/visual_indetity/src/: tag_grab.cpp
my_class_pkg/: CMakeLists.txt  README.md  readme.txt
my_class_pkg/launch/: bringup_topic.launch.py
my_class_pkg/msg/: MyMessage.msg
my_class_pkg/src/: msg_subscriber.cpp  ros_action_server.cpp  ros_client.cpp  ros_server.cpp  ros_subscriber.cpp
my_param_pkg/: CMakeLists.txt  README.md  package.xml
my_param_pkg/launch/: parameter.launch.py
my_param_pkg/scripts/: dynamic_param.py  turtle_dynamic_speed.py
my_param_pkg/src/: ros_param.cpp
my_tools_pkg/: CMakeLists.txt
my_tools_pkg/scripts/: ros_log.py
my_tools_pkg/src/: ros_log.cpp
